--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9090
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/User-Service
+    url: jdbc:postgresql://localhost:6000/User-Service
     username: postgres
     password: admin
     driver-class-name: org.postgresql.Driver
